# dolphin

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  CONFIG_OPTIONS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  QUICKSTART.rst  README.md  README.rst  codecov.yaml  codecov.yml  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  tox.ini
.github/workflows/: ci-test.yml  ci.yaml  ci.yml  main.yml  pre-commit.yaml  publish-pypi.yaml  publish-pypi.yml  publish-testpypi.yaml  python-package.yml  pythonpackage.yml
ai/: modeler.py  vision.py
ai_training/: U_Net_Architecture_for_Training_and_Testing.ipynb  create_dataset.ipynb  dataset.py  filter_settings.yaml
ai_training/resources/: psf_res3x_wfc3_f160w.npy  psf_wfc3_f160w.npy  psf_wfc3_f200lp.npy  psf_wfc3_f475x.npy  psf_wfc3_f814w.npy  psf_wfpc2_f606w.npy
analysis/: output.py
docs/: conf.py  doc_requirements.txt  dolphin.processor.rst  dolphin.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  usage.rst
docs/modules/: dolphin.ai.rst  dolphin.analysis.output.rst  dolphin.analysis.rst  dolphin.processor.config.rst  dolphin.processor.core.rst  dolphin.processor.data.rst  dolphin.processor.files.rst  dolphin.processor.recipe.rst  dolphin.processor.rst  modules.rst
docs/source/: conf.py  config_options.rst  dolphin.analysis.rst  dolphin.processor.rst  dolphin.rst  index.rst  modules.rst  quickstart.rst
docs_test/: conf.py
dolphin/: __init__.py
dolphin/Util/: __init__.py  jax_util.py
dolphin/ai/: __init__.py  ai.py  modeler.py  vision.py
dolphin/analysis/: __init__.py  output.py  photometry.py  post_processor.py
dolphin/initializer/: load_data.py  settings_template.txt
dolphin/preprocessing/: psf.py
dolphin/processor/: __init__.py  config.py  core.py  data.py  files.py  recipe.py  swim.py
dolphin/util/: jax_util.py
io_directory_example/: lens_list.txt
io_directory_example/hpc/: create_job_sge.sh  submit_jobs.py  swim.py
io_directory_example/logs/: log_lens_system1_test.txt
io_directory_example/outputs/: output_lens_system1_example.h5  output_lens_system1_test.h5  output_lens_system2_example.h5  output_lens_system3_example3.h5  output_lens_system_mge_example_mge.h5  output_lens_system_test_example.h5  output_test_save_test.h5  (+5 more)
notebooks/: Advanced example.ipynb  Basic example.ipynb  Example for lensed quasar.ipynb  Example of full auomation with AI.ipynb  Example of photometry.ipynb  Multi-Gaussian Expansion lens light example.ipynb  Multi-filter example.ipynb
processor/: config.py  core.py  files.py  recipe.py
storage/: lens_list.txt
test/: test_dolphin.py  test_pipeline.py
test_working_directory/: lens_list.txt
(+60 files in other folders)
