[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dolphin"
version = "0.0.2"
description = "Automated pipeline for lens modeling based on lenstronomy"
authors = [
    { name = "Anowar Shajib", email = "ajshajib@gmail.com" }
]
readme = "README.md"
license = { text = "MIT license" }
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Users",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11"
]
keywords = ["dolphin"]

[project.urls]
Homepage = "https://github.com/ajshajib/dolphin"

[tool.setuptools]
packages = ["dolphin", "dolphin.*"]
include_package_data = true

[tool.setuptools.scripts]
test_suite = "tests"

[tool.setuptools.requirements]
install_requires = []
tests_require = []
